# Trading-Core

./: .gitignore  .replit  =1.26.0  ETHUSDT0802.csv  NeuroSync_link.txt  README.md  URL.txt  ai_client.py  ai_strategy.py  apex_detector.py  api_client.py  api_utils.py  auth_handler.py  auth_log.py  backup_manager.py  chart_reader.py  cli_display.py  command_router.py  config.py  connection_validator.py  console_display.py  cooldown_limiter.py  core.py  core_initializer.py  core_loop.py  core_socket_client.py  dan1_core.py  dan2.py  dan2_override.py  data_orchestrator.py  devurl.txt  env_loader.py  error_reporter.py  exchange_client.py  execution_log.json  execution_module.py  failover_handler.py  headers_builder.py  heartbeat_sync.py  integrity_test.py  (+72 more)
code/: apex_detector.py  api_utils.py  asterdex_map.py  auth_handler.py  auth_log.py  auth_test.py  backup_manager.py  cli_display.py  command_parser.py  connection_validator.py  core_loop.py  dan1_core.py  env_loader.py  failover_handler.py  fallback_protocol.py  latency_indexer.py  log_writer.py  loop_integrity_checker.py  main.py  memory_snapshot.py  orderbook_reader.py  reauth_trigger.py  schema.json  secret_loader.py  signature_test.py  status_monitor.py  telemetry_stream.py  test_order.py  timestamp_sync.py  trade_simulator.py
config/: config.py  strategy_config.py
core/: execution_chain.py  rolling5_core.py
data_managers/: asterdex_client.py  market_data_manager.py  market_data_ws_client.py  market_state.py  orderbook_parser.py  trade_lifecycle_manager.py
datasets/: sync_state.json
execution/: ExecutionModule.py  execution_module.py  executionmodule.py  simulation_account.py
filters/: OrderBookReversalZoneDetector.py  breakout_zone_origin_filter.py  compression_detector.py  cts_filter.py  internal_api_client.py  low_volume_guard.py  multi_candle_trend_confirmation.py  order_book_reversal_zone_detector.py  retest_entry_logic.py  sentiment_divergence_filter.py  spoof_filter.py  time_of_day_filter.py
logs/: Transfer.txt  failed_signals.json  memory_tracker.db  tradelog.txt
managers/: TPSLManager.py
migrations/: pg_schema.sql
raw_api_logs/: _depth.json  _klines.json  _openInterest.json  _premiumIndex.json  (+2 more)
(+42 files in other folders)
