[tool.poetry]
name = "trading-core"
version = "0.1.0"
description = "Core logic for the trading system."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
httpx = "^0.25.2"
python-dotenv = "^1.0.0"
websockets = "^12.0"
# The missing package for timezone handling
pytz = "^2023.3.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
