[tool.poetry]
name = "trading-core"
version = "1.0.0"
description = "REALITY_CORE (GENESIS) Trading Engine"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# --- Core Application & Web ---
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
httpx = "0.27.0"
websockets = "12.0"
aiohttp = "^3.9.5"

# --- AI, Data & Numerics ---
pydantic = "^2.11.7"
xai-sdk = "^1.0.0"
numpy = "^1.26.0"

# --- Utilities ---
python-dotenv = "1.0.1"
python-json-logger = "^2.0.7"
psutil = "^5.9.8"
requests = "^2.32.4"
pyyaml = "^6.0.1"

# --- Legacy & Other Dependencies ---
downloadduxiu = "^0.9"
grpcio = "^1.73.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

